--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+endpoints:
+  all:
+    enabled: true
+    path: "/management"
+    sensitive: false
 micronaut:
   application:
     name: timeTraveller
