--- a/pom.xml
+++ b/pom.xml
@@ -4,20 +4,20 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>hm.binkley.labs</groupId>
   <artifactId>time-traveller</artifactId>
-  <version>0.1</version>
+  <version>0-SNAPSHOT</version>
   <packaging>${packaging}</packaging>
 
   <parent>
     <groupId>io.micronaut</groupId>
     <artifactId>micronaut-parent</artifactId>
-    <version>3.4.0</version>
+    <version>3.4.1</version>
   </parent>
 
   <properties>
     <packaging>jar</packaging>
     <jdk.version>17</jdk.version>
     <release.version>17</release.version>
-    <micronaut.version>3.4.0</micronaut.version>
+    <micronaut.version>${project.parent.version}</micronaut.version>
     <exec.mainClass>hm.binkley.labs.ApplicationKt</exec.mainClass>
     <kotlinVersion>1.6.10</kotlinVersion>
     <micronaut.runtime>netty</micronaut.runtime>
